Actualizar footer: añadir logo GobCan, modificar badge accesibilidad y eliminar columna Áreas

--- a/index.html
+++ b/index.html
@@ -1300,11 +1300,11 @@
                                     <a class="" data-scroll href="#home">Inicio</a>
                                     <a class="" data-scroll href="#about">Conócenos</a>
                                     <a class="" data-scroll href="#features">Áreas</a>
-                                    <a class="" data-scroll href="#portfolios">Proyectos</a>
                                 </div>
                                 <div class="col-6 pop-link" style="text-align: center">
                                     <!-- <a class="" data-scroll href="#news">Novedades</a>
                                     <a class="" data-scroll href="#colabora">Colabora</a> -->
+                                    <a class="" data-scroll href="#portfolios">Proyectos</a>
                                     <a class="" data-scroll href="#contact">Contacto</a>
                                     <a class="" href="transparencia.html">Transparencia</a>
                                 </div>
@@ -1380,78 +1380,8 @@
                                 </div>
                             </div>
                         </div>-->
-                        <div class="col-sm-6 col-lg-4">
-                            <h3>Formulario de contacto</h3>
-
-                            <!-- Mensaje de éxito/error -->
-                            <div id="form-message" class="form-message" style="display: none;"></div>
-
-                            <form method="post" action="php/enviar_correo.php" id="contact-form">
-                                <input type="hidden" name="area" value="inicio">
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <div class="form-group">
-                                            <label for="name1">Tu nombre:</label>
-                                            <input type="text" name="txtName" id="name1" class="form-control" placeholder="Escribe tu nombre completo *" required />
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div class="form-group">
-                                            <label for="email1">Tu email:</label>
-                                            <input type="email" name="txtEmail" id="email1" class="form-control" placeholder="Escribe tu email *" required />
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <div class="form-group">
-                                            <label for="msg1">Tu mensaje:</label>
-                                            <textarea name="txtMsg" id="msg1" class="form-control" placeholder="Escribe tu mensaje *" style="width: 100%; height: 115px;" required></textarea>
-                                        </div>
-                                        <div class="form-group">
-                                            <input type="submit" name="btnSubmit" class="btnContact" value="Enviar mensaje" />
-                                        </div>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
 
             <!--Footer three columns end-->
-            <!--Footer menu-->
-            <div class="footer-container footer-dark">
-                <div class="inside-container">
-                    <div class="row">
-                        <div class="lab-footer-menu">
-                            <ul id="footer-menu" class="nav-menu footer-nav">
-                                <li class="menu-item">
-                                    <a href="#home" data-scroll class="">Inicio</a>
-                                </li>
-                                <li class="menu-item">
-                                    <a class="" data-scroll href="#about">Conócenos</a>
-                                </li>
-                                <li class="menu-item">
-                                    <a class="" data-scroll href="#features">Áreas</a>
-                                </li>
-                                <li class="menu-item">
-                                    <a class="" data-scroll href="#portfolios">Proyectos</a>
-                                </li>
-                                <li class="menu-item">
-                                    <a class="" data-scroll href="#news">Novedades</a>
-                                </li>
-                                <li class="menu-item">
-                                    <a class="" data-scroll href="#colabora">Colabora</a>
-                                </li>
-                                <li class="menu-item">
-                                    <a class="" data-scroll href="#contact">Contacto</a>
-                                </li>
-                                <li class="menu-item">
-                                    <a class="" href="transparencia.html">Transparencia</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
             <!--Footer menu end -->
 
             <!--Footer copyright-->
@@ -1460,11 +1390,12 @@
                     <div class="row footer-dark">
                         <div class="col-12 copyright-text" style="text-align: center;">
                             <p>&#169; <script>document.write(new Date().getFullYear());</script> <a href="https://coordicanarias.com/" target="_blank" rel="noopener">Coordicanarias</a>. Todos los derechos reservados.</p>
+                            <a href="https://www.gobiernodecanarias.org/bienestarsocial/dependencia/" target="_blank" rel="noopener">
+                                        <img src="images/logos_gobcan/Logo_GobCan_claim_color_mod1.png" alt="Gobierno de Canarias - Dirección General de Dependencia" width="150">
+                            </a>
                             <a href="areas/accesibilidad.html" class="accesibilidad-badge">
                                         <span class="wcag-badge">
-                                            <strong>Grado de accesibilidad de nuestro portal web</strong>
-                                            <strong>WCAG 2.2</strong>
-                                            <span class="nivel-aa">Nivel AA</span>
+                                            <strong>accesibilidad WCAG 2.2 AA</strong>
                                         </span>
                             </a>
                             <div id="lab-back-top" style="display: none;">
