--- a/areas/ocio.html
+++ b/areas/ocio.html
@@ -591,7 +591,7 @@
         <div class="main-container">
             <div class="inside-container">
                 <div class="row">
-                    <div class="col-sm-6 col-lg-3 foot-col-padd">
+                    <div class="col-sm-6 col-lg-4 foot-col-padd">
                         <div class="foot-logo">
                             <img src="../images/brand-coordi-black.svg" width="250" alt="Logotipo de Coordicanarias" class="float-center img-fluid">
                         </div>
@@ -666,7 +666,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-lg-3" style="padding-top: 20px">
+                    <div class="col-sm-6 col-lg-4" style="padding-top: 20px">
                         <h3 style="text-align: center; padding-bottom: 15px;
                             border-bottom: 1px solid #000; margin-bottom: 20px">Enlaces Rápidos</h3>
 
@@ -683,23 +683,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-lg-3" style="padding-top: 20px">
-                        <h3 style="text-align: center; padding-bottom: 15px;
-                            border-bottom: 1px solid #000; margin-bottom: 20px">Áreas</h3>
-                        <div class="row">
-                            <div class="col-6 pop-link" style="text-align: center">
-                                <a href="forminno.html">Formación</a>
-                                <a href="empleo.html">Empleo</a>
-                                <a href="aintegral.html">Atención Integral</a>
-                            </div>
-                            <div class="col-6 pop-link" style="text-align: center">
-                                <a href="#home">Ocio</a>
-                                <a href="participaca.html">Participación</a>
-                                <a href="igualdadpm.html">Igualdad</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-3" style="padding-top: 20px">
+                    <div class="col-sm-6 col-lg-4" style="padding-top: 20px">
                         <h3 style="text-align: center; padding-bottom: 15px;
                             border-bottom: 1px solid #000; margin-bottom: 20px">Información Legal</h3>
                         <div class="row">
@@ -709,8 +693,7 @@
                                 <a href="alegal.html">Aviso legal</a>
                                 <a href="accesibilidad.html" class="accesibilidad-badge">
                                     <span class="">
-                                        <strong>WCAG 2.2</strong>
-                                        <span class="nivel-aa">Nivel AA</span>
+                                        <strong>accesibilidad WCAG 2.2 AA</strong>
                                     </span>
                                 </a>
                             </div>
@@ -727,6 +710,9 @@
                 <div class="row footer-dark">
                     <div class="col-12 copyright-text" style="text-align: center;">
                         <p>&#169; <script>document.write(new Date().getFullYear());</script> <a href="https://coordicanarias.com/" target="_blank" rel="noopener">Coordicanarias</a>. Todos los derechos reservados.</p>
+                        <a href="https://www.gobiernodecanarias.org/bienestarsocial/dependencia/" target="_blank" rel="noopener">
+                            <img src="../images/logos_gobcan/Logo_GobCan_claim_color_mod1.png" alt="Gobierno de Canarias - Dirección General de Dependencia" width="150">
+                        </a>
                         <div id="lab-back-top" style="display: none;">
                             <a id="backtotop" tabindex="0" aria-label="Volver arriba">
                                 <svg xmlns="http://www.w3.org/2000/svg" style="isolation:isolate" viewBox="0 0 285 285">
