banner accesibilidad en el footer

--- a/areas/aintegral.html
+++ b/areas/aintegral.html
@@ -317,9 +317,6 @@
                                                     <a href="../index.html" class="">Inicio</a>
                                                 </li>
                                                 <li class="menu-item">
-                                                    <a class="" href="../index.html#features">Áreas</a>
-                                                </li>
-                                                <li class="menu-item">
                                                     <a class="" href="../transparencia.html">Transparencia</a>
                                                 </li>
                                                 <li class="menu-item">
@@ -336,6 +333,9 @@
                                                 </li>
                                                 <li class="menu-item">
                                                     <a class="" data-scroll href="#participa-ai">Participa</a>
+                                                </li>
+                                                <li class="menu-item">
+                                                    <a class="" href="../index.html#features">Áreas</a>
                                                 </li>
                                                 <li class="menu-item menu-search-item">
                                                     <form id="mobile-search-form" class="mobile-search-form" role="search" aria-label="Buscar en el sitio">
@@ -875,6 +875,7 @@
                                     <a class="" data-scroll href="#portfolios-ai">Proyectos</a>
                                     <a class="" data-scroll href="#beneficios-ai">Beneficios</a>
                                     <a class="" data-scroll href="#participa-ai">Participa</a>
+                                    <a href="../index.html#features" class="">Áreas</a>
                                 </div>
                             </div>
                         </div>
@@ -886,11 +887,6 @@
                                     <a href="politica-cookies.html">Política de cookies</a>
                                     <a href="politica-privacidad.html">Política de privacidad</a>
                                     <a href="alegal.html">Aviso legal</a>
-                                    <a href="accesibilidad.html" class="accesibilidad-badge">
-                                        <span class="">
-                                            <strong>accesibilidad WCAG 2.2 AA</strong>
-                                        </span>
-                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -1027,6 +1023,11 @@
                             <p>&#169; <script>document.write(new Date().getFullYear());</script> <a href="https://coordicanarias.com/" target="_blank" rel="noopener">Coordicanarias</a>. Todos los derechos reservados.</p>
                             <a href="https://www.gobiernodecanarias.org/bienestarsocial/dependencia/" target="_blank" rel="noopener">
                                 <img src="../images/logos_gobcan/Logo_GobCan_claim_color_mod1.png" alt="Gobierno de Canarias - Dirección General de Dependencia" width="150">
+                            </a>
+                            <a href="accesibilidad.html" class="accesibilidad-badge">
+                                        <span class="wcag-badge">
+                                            <strong>accesibilidad WCAG 2.2 AA</strong>
+                                        </span>
                             </a>
                             <div id="lab-back-top" style="display: none;">
                                 <a id="backtotop" tabindex="0" aria-label="Volver arriba">
