--- a/areas/politica-privacidad.html
+++ b/areas/politica-privacidad.html
@@ -397,9 +397,6 @@
                                             <a href="../index.html" class="">Inicio</a>
                                         </li>
                                         <li class="menu-item">
-                                            <a href="../index.html#features" class="">Áreas</a>
-                                        </li>
-                                        <li class="menu-item">
                                             <a class="" data-scroll href="#objeto-pp">Objeto</a>
                                         </li>
                                         <li class="menu-item">
@@ -407,6 +404,9 @@
                                         </li>
                                         <li class="menu-item">
                                             <a class="" data-scroll href="#contacto-pp">Contacto</a>
+                                        </li>
+                                        <li class="menu-item">
+                                            <a href="../index.html#features" class="">Áreas</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -436,9 +436,6 @@
                                                     <a href="../index.html" class="">Inicio</a>
                                                 </li>
                                                 <li class="menu-item">
-                                                    <a class="" href="../index.html#features">Áreas</a>
-                                                </li>
-                                                <li class="menu-item">
                                                     <a class="" href="../transparencia.html">Transparencia</a>
                                                 </li>
                                                 <li class="menu-item">
@@ -449,6 +446,9 @@
                                                 </li>
                                                 <li class="menu-item">
                                                     <a class="" data-scroll href="#contacto-pp">Contacto</a>
+                                                </li>
+                                                <li class="menu-item">
+                                                    <a class="" href="../index.html#features">Áreas</a>
                                                 </li>
                                                 <li class="menu-item menu-search-item">
                                                     <form id="mobile-search-form" class="mobile-search-form" role="search" aria-label="Buscar en el sitio">
@@ -948,11 +948,14 @@
                             border-bottom: 1px solid #000; margin-bottom: 20px">Enlaces Rápidos</h3>
 
                             <div class="row">
-                                <div class="col-12 pop-link" style="text-align: center">
-                                    <a class="" data-scroll href="#home">Inicio</a>
+                                <div class="col-6 pop-link" style="text-align: center">
+                                    a class="" data-scroll href="#home">Inicio</a>
                                     <a class="" data-scroll href="#objeto-pp">Objeto</a>
+                                </div>
+                                <div class="col-6 pop-link" style="text-align: center">
                                     <a class="" data-scroll href="#politica-privacidad">Política de Privacidad</a>
                                     <a class="" data-scroll href="#contacto-pp">Contacto</a>
+                                    <a href="../index.html#features" class="">Áreas</a>
                                 </div>
                             </div>
                         </div>
@@ -964,11 +967,6 @@
                                     <a href="politica-cookies.html">Política de cookies</a>
                                     <a href="#home">Política de privacidad</a>
                                     <a href="alegal.html">Aviso legal</a>
-                                    <a href="accesibilidad.html" class="accesibilidad-badge">
-                                        <span class="">
-                                            <strong>accesibilidad WCAG 2.2 AA</strong>
-                                        </span>
-                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -986,6 +984,11 @@
                             <p>&#169; <script>document.write(new Date().getFullYear());</script> <a href="https://coordicanarias.com/" target="_blank" rel="noopener">Coordicanarias</a>. Todos los derechos reservados.</p>
                             <a href="https://www.gobiernodecanarias.org/bienestarsocial/dependencia/" target="_blank" rel="noopener">
                                 <img src="../images/logos_gobcan/Logo_GobCan_claim_color_mod1.png" alt="Gobierno de Canarias - Dirección General de Dependencia" width="150">
+                            </a>
+                            <a href="accesibilidad.html" class="accesibilidad-badge">
+                                        <span class="wcag-badge">
+                                            <strong>accesibilidad WCAG 2.2 AA</strong>
+                                        </span>
                             </a>
                             <div id="lab-back-top" style="display: none;">
                                 <a id="backtotop" tabindex="0" aria-label="Volver arriba">
