--- a/transparencia.html
+++ b/transparencia.html
@@ -603,9 +603,6 @@
                                         <a href="index.html" class="">Inicio</a>
                                     </li>
                                     <li class="menu-item">
-                                        <a href="index.html#features" class="">Áreas</a>
-                                    </li>
-                                    <li class="menu-item">
                                         <a class="" data-scroll href="#welcome">Bienvenida</a>
                                     </li>
                                     <li class="menu-item">
@@ -613,6 +610,9 @@
                                     </li>
                                     <li class="menu-item">
                                         <a class="" data-scroll href="#participa-tra">Acceso a la información pública</a>
+                                    </li>
+                                    <li class="menu-item">
+                                        <a href="index.html#features" class="">Áreas</a>
                                     </li>
                                 </ul>
                             </div>
@@ -1537,6 +1537,7 @@
                             </div>
                             <div class="col-6 pop-link" style="text-align: center">
                                 <a class="" data-scroll href="#participa-tra">Acceso a la información pública</a>
+                                <a href="index.html#features" class="">Áreas</a>
                             </div>
                         </div>
                     </div>
@@ -1548,11 +1549,6 @@
                                 <a href="areas/politica-cookies.html">Política de cookies</a>
                                 <a href="areas/politica-privacidad.html">Política de privacidad</a>
                                 <a href="areas/alegal.html">Aviso legal</a>
-                                <a href="areas/accesibilidad.html" class="accesibilidad-badge">
-                                    <span class="">
-                                        <strong>accesibilidad WCAG 2.2 AA</strong>
-                                    </span>
-                                </a>
                             </div>
                         </div>
                     </div>
@@ -1569,6 +1565,11 @@
                         <p>&#169; <script>document.write(new Date().getFullYear());</script> <a href="https://coordicanarias.com/" target="_blank" rel="noopener">Coordicanarias</a>. Todos los derechos reservados.</p>
                         <a href="https://www.gobiernodecanarias.org/bienestarsocial/dependencia/" target="_blank" rel="noopener">
                             <img src="images/logos_gobcan/Logo_GobCan_claim_color_mod1.png" alt="Gobierno de Canarias - Dirección General de Dependencia" width="150">
+                        </a>
+                        <a href="areas/accesibilidad.html" class="accesibilidad-badge">
+                                        <span class="wcag-badge">
+                                            <strong>accesibilidad WCAG 2.2 AA</strong>
+                                        </span>
                         </a>
                         <div id="lab-back-top" style="display: none;">
                             <a id="backtotop" tabindex="0" aria-label="Volver arriba">
