--- a/areas/accesibilidad.html
+++ b/areas/accesibilidad.html
@@ -591,9 +591,6 @@
                                         <a href="../index.html" class="">Inicio</a>
                                     </li>
                                     <li class="menu-item">
-                                        <a href="../index.html#features" class="">Áreas</a>
-                                    </li>
-                                    <li class="menu-item">
                                         <a class="" data-scroll href="#compromiso">Compromiso</a>
                                     </li>
                                     <li class="menu-item">
@@ -601,6 +598,9 @@
                                     </li>
                                     <li class="menu-item">
                                         <a class="" data-scroll href="#contacto-acc">Contacto</a>
+                                    </li>
+                                    <li class="menu-item">
+                                        <a href="../index.html#features" class="">Áreas</a>
                                     </li>
                                 </ul>
                             </div>
@@ -630,9 +630,6 @@
                                                 <a href="../index.html" class="">Inicio</a>
                                             </li>
                                             <li class="menu-item">
-                                                <a class="" href="../index.html#features">Áreas</a>
-                                            </li>
-                                            <li class="menu-item">
                                                 <a class="" href="../transparencia.html">Transparencia</a>
                                             </li>
                                             <li class="menu-item">
@@ -643,6 +640,9 @@
                                             </li>
                                             <li class="menu-item">
                                                 <a class="" data-scroll href="#contacto-acc">Contacto</a>
+                                            </li>
+                                            <li class="menu-item">
+                                                <a class="" href="../index.html#features">Áreas</a>
                                             </li>
                                             <li class="menu-item menu-search-item">
                                                 <form id="mobile-search-form" class="mobile-search-form" role="search" aria-label="Buscar en el sitio">
@@ -1287,6 +1287,7 @@
                             </div>
                             <div class="col-6 pop-link" style="text-align: center">
                                 <a class="" data-scroll href="#contacto-acc">Contacto</a>
+                                <a href="../index.html#features" class="">Áreas</a>
                             </div>
                         </div>
                     </div>
@@ -1298,11 +1299,6 @@
                                 <a href="politica-cookies.html">Política de cookies</a>
                                 <a href="politica-privacidad.html">Política de privacidad</a>
                                 <a href="alegal.html">Aviso legal</a>
-                                <a href="accesibilidad.html" class="accesibilidad-badge">
-                                    <span class="">
-                                        <strong>accesibilidad WCAG 2.2 AA</strong>
-                                    </span>
-                                </a>
                             </div>
                         </div>
                     </div>
@@ -1319,6 +1315,11 @@
                         <p>&#169; <script>document.write(new Date().getFullYear());</script> <a href="https://coordicanarias.com/" target="_blank" rel="noopener">Coordicanarias</a>. Todos los derechos reservados.</p>
                         <a href="https://www.gobiernodecanarias.org/bienestarsocial/dependencia/" target="_blank" rel="noopener">
                             <img src="../images/logos_gobcan/Logo_GobCan_claim_color_mod1.png" alt="Gobierno de Canarias - Dirección General de Dependencia" width="150">
+                        </a>
+                        <a href="accesibilidad.html" class="accesibilidad-badge">
+                                        <span class="wcag-badge">
+                                            <strong>accesibilidad WCAG 2.2 AA</strong>
+                                        </span>
                         </a>
                         <div id="lab-back-top" style="display: none;">
                             <a id="backtotop" tabindex="0" aria-label="Volver arriba">
