Añadido publicidad gobcan

--- a/areas/politica-privacidad.html
+++ b/areas/politica-privacidad.html
@@ -981,15 +981,15 @@
                 <div class="inside-container">
                     <div class="row footer-dark">
                         <div class="col-12 copyright-text" style="text-align: center;">
-                            <p>&#169; <script>document.write(new Date().getFullYear());</script> <a href="https://coordicanarias.com/" target="_blank" rel="noopener">Coordicanarias</a>. Todos los derechos reservados.</p>
                             <a href="https://www.gobiernodecanarias.org/bienestarsocial/dependencia/" target="_blank" rel="noopener">
-                                <img src="../images/logos_gobcan/Logo_GobCan_claim_color_mod1.png" alt="Gobierno de Canarias - Dirección General de Dependencia" width="150">
+                                <img src="../images/logos_gobcan/Logo_GobCan_claim_negro_mod1.png" alt="Gobierno de Canarias - Dirección General de Dependencia" width="150">
                             </a>
                             <a href="accesibilidad.html" class="accesibilidad-badge">
                                         <span class="wcag-badge">
                                             <strong>accesibilidad WCAG 2.2 AA</strong>
                                         </span>
                             </a>
+                            <p>&#169; <script>document.write(new Date().getFullYear());</script> <a href="https://coordicanarias.com/" target="_blank" rel="noopener">Coordicanarias</a>. Sitio Web subvencionado por la Consejería de Bienestar Social, Igualdad, Juventud, Infancia y Discapacidad.</p>                            <a href="https://www.gobiernodecanarias.org/bienestarsocial/dependencia/" target="_blank" rel="noopener">
                             <div id="lab-back-top" style="display: none;">
                                 <a id="backtotop" tabindex="0" aria-label="Volver arriba">
                                     <svg xmlns="http://www.w3.org/2000/svg" style="isolation:isolate" viewBox="0 0 285 285">
