ajuste del logo

--- a/areas/igualdadpm.html
+++ b/areas/igualdadpm.html
@@ -708,7 +708,7 @@
                 <div class="row footer-dark">
                     <div class="col-12 copyright-text" style="text-align: center;">
                         <a href="https://www.gobiernodecanarias.org/bienestarsocial/dependencia/" target="_blank" rel="noopener">
-                            <img src="../images/logos_gobcan/Logo_GobCan_claim_negro_mod1.png" alt="Gobierno de Canarias - Dirección General de Dependencia" width="150">
+                            <img src="../images/logos_gobcan/Logo_GobCan_claim_negro_mod1.png" alt="Gobierno de Canarias - Dirección General de Dependencia" width="120" style="margin: 15px 20px 30px 15px">
                         </a>
                         <a href="accesibilidad.html" class="accesibilidad-badge">
                                         <span class="wcag-badge">
