--- a/transparencia.html
+++ b/transparencia.html
@@ -1562,6 +1562,7 @@
             <div class="inside-container">
                 <div class="row footer-dark">
                     <div class="col-12 copyright-text" style="text-align: center;">
+                        <a href="https://www.gobiernodecanarias.org/bienestarsocial/dependencia/" target="_blank" rel="noopener">
                             <img src="images/logos_gobcan/Logo_GobCan_claim_negro_mod1.png" alt="Gobierno de Canarias - Dirección General de Dependencia" width="120" style="margin: 15px 20px 30px 15px">
                         </a>
                         <a href="areas/accesibilidad.html" class="accesibilidad-badge">
@@ -1569,7 +1570,7 @@
                                             <strong>accesibilidad WCAG 2.2 AA</strong>
                                         </span>
                         </a>
-                        <p>&#169; <script>document.write(new Date().getFullYear());</script> <a href="https://coordicanarias.com/" target="_blank" rel="noopener">Coordicanarias</a>. Sitio Web subvencionado por la Consejería de Bienestar Social, Igualdad, Juventud, Infancia y Discapacidad.</p>                        <a href="https://www.gobiernodecanarias.org/bienestarsocial/dependencia/" target="_blank" rel="noopener">
+                        <p>&#169; <script>document.write(new Date().getFullYear());</script> <a href="https://coordicanarias.com/" target="_blank" rel="noopener">Coordicanarias</a><br> Sitio Web subvencionado por la Consejería de Bienestar Social, Igualdad, Juventud, Infancia y Discapacidad del Gobierno de Canarias.</p>
                         <div id="lab-back-top" style="display: none;">
                             <a id="backtotop" tabindex="0" aria-label="Volver arriba">
                                 <svg xmlns="http://www.w3.org/2000/svg" style="isolation:isolate" viewBox="0 0 285 285">
