CRUD de Beneficios realizado

--- a/areas/alegal.html
+++ b/areas/alegal.html
@@ -841,9 +841,11 @@
                             border-bottom: 1px solid #000; margin-bottom: 20px">Enlaces Rápidos</h3>
 
                             <div class="row">
-                                <div class="col-12 pop-link" style="text-align: center">
+                                <div class="col-6 pop-link" style="text-align: center">
                                     <a class="" data-scroll href="#home">Inicio</a>
                                     <a class="" data-scroll href="#objeto-al">Objeto</a>
+                                </div>
+                                <div class="col-6 pop-link" style="text-align: center">
                                     <a class="" data-scroll href="#aviso-legal">Aviso Legal</a>
                                     <a class="" data-scroll href="#contacto-al">Contacto</a>
                                     <a href="../index.html#features" class="">Áreas</a>
