--- a/areas/politica-privacidad.html
+++ b/areas/politica-privacidad.html
@@ -949,7 +949,7 @@
 
                             <div class="row">
                                 <div class="col-6 pop-link" style="text-align: center">
-                                    a class="" data-scroll href="#home">Inicio</a>
+                                    <a class="" data-scroll href="#home">Inicio</a>
                                     <a class="" data-scroll href="#objeto-pp">Objeto</a>
                                 </div>
                                 <div class="col-6 pop-link" style="text-align: center">
