Corrección de algunos pequeños errores de diseño en accesibilidad.html, politica-coockies.html e index.html

--- a/index.html
+++ b/index.html
@@ -891,8 +891,8 @@
         Team Section end -->
 
 
-        <!--Testimonial container
-        <section id="testimonials" class="section">
+        <!--Testimonial container-->
+        <!--<section id="testimonials" class="section">
             <div class="main-container">
                 <div class="inside-container">
                     <div class="row">
@@ -972,8 +972,8 @@
                     </div>
                 </div>
             </div>
-        </section>
-        Testimonial container end-->
+        </section>-->
+        <!--Testimonial container end-->
 
 
         <!--News section-->
